# rele

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  PERFORMANCE.md  clippy.toml  rust-toolchain.toml
baselines/: emacs-test-results-round5-post.jsonl  round5-summary.md
crates/app-gpui/: CLAUDE.md  Cargo.toml  README.md
crates/app-gpui/src/: actions.rs  commands.rs  dired.rs  keybindings.rs  lib.rs  minibuffer.rs  state.rs
crates/app-gpui/src/markdown/: mod.rs  parser.rs  renderer.rs  source_map.rs  syntax_highlight.rs  text_layout.rs  theme_colors.rs
crates/app-gpui/src/views/: command_palette.rs  editor_pane.rs  find_bar.rs  main_view.rs  minibuffer.rs  mod.rs  preview_pane.rs  toolbar_view.rs
crates/app-gpui/tests/: test_buffer_list.rs  test_command_palette.rs  test_commands.rs  test_cursor.rs  test_document_buffer.rs  test_elisp.rs  test_emacs_commands.rs  test_fix_document.rs  test_fix_import_export.rs  test_fix_renderer.rs  test_fix_state.rs  test_fix_syntax.rs  test_fix_view_contracts.rs  test_history.rs  test_isearch.rs  test_kill_ring.rs  test_macros.rs  test_phase3_features.rs  test_renderer.rs  test_review_fixes.rs  test_review_round2.rs  test_state.rs  test_syntax_highlight.rs  test_universal_arg.rs
crates/app-tui/: Cargo.toml
crates/app-tui/src/: commands.rs  main.rs  state.rs  ui.rs  windows.rs
crates/elisp/: BOOTSTRAP_GAPS.md  CHANGELOG.md  Cargo.toml  ERT_PROGRESS.md  ROADMAP.md
crates/elisp-spec-tests/: Cargo.toml
crates/elisp-spec-tests/src/: expr_gen.rs  lib.rs  replay.rs
crates/elisp-spec-tests/tests/: differential.proptest-regressions  differential.rs  jit_traces.rs
crates/elisp/benches/: eval_dispatch.rs  jit_hotpath.rs  value_fastpath.rs
crates/elisp/ert-progress/: SESSIONS.md  refresh.py  refresh.sh  stub_inventory.py  stub_inventory_baseline.tsv  summarize.py  tractable.list
crates/elisp/scripts/: diff-emacs-results.sh  pre-jit-baseline.sh
crates/elisp/src/: buffer.rs  error.rs  gc.rs  lib.rs  obarray.rs  object.rs  primitives.rs  primitives_buffer.rs  primitives_cl.rs  primitives_eieio.rs  primitives_file.rs  primitives_modules.rs  primitives_value.rs  primitives_window.rs  reader.rs  value.rs  vm.rs
crates/elisp/src/emacs/: casefiddle.rs  data.rs  fns.rs  mod.rs  search.rs
crates/elisp/src/eval/: atoms.rs  bootstrap.rs  bootstrap_shortcuts.rs  builtins.rs  dispatch.rs  dynamic.rs  editor.rs  environment.rs  error_forms.rs  functions.rs  interpreter_traits.rs  interpreterstate_traits.rs  keymap_forms.rs  macro_table.rs  metadata.rs  mod.rs  pcase.rs  special_forms.rs  state_cl.rs  sync_cell.rs  tests.rs  thread_locals.rs  types.rs
crates/elisp/src/eval/bootstrap/: functions.rs  functions_2.rs  functions_3.rs  functions_4.rs  mod.rs  types.rs
crates/elisp/src/eval/functions/: fallbackframe_traits.rs  functions.rs  functions_2.rs  functions_3.rs  functions_4.rs  functions_5.rs  mod.rs  types.rs
crates/elisp/src/eval/tests/: functions.rs  functions_2.rs  functions_3.rs  functions_4.rs  functions_5.rs  functions_6.rs  functions_7.rs  functions_8.rs  functions_9.rs  mod.rs  types.rs  worker_traits.rs
crates/elisp/src/gc/: mod.rs
crates/elisp/src/jit/: compiler.rs  mod.rs  profiler.rs
crates/elisp/src/primitives/: buffer.rs  category.rs  cl.rs  core.rs  eieio.rs  file.rs  mod.rs  modules.rs  value.rs  window.rs
crates/elisp/src/primitives/core/: abbrevs.rs  base64.rs  coding_systems.rs  error_prims.rs  ert.rs  faces.rs  file_ops.rs  hash.rs  hashing.rs  io.rs  json.rs  key_descriptions.rs  keymaps.rs  list.rs  math.rs  minibuf.rs  misc.rs  misc_system.rs  obarrays.rs  predicates.rs  processes.rs  records.rs  selections.rs  sequence.rs  sqlite.rs  string.rs  stub_telemetry.rs  stubs.rs  symbol.rs  terminal.rs  threads.rs  time.rs  timers.rs  vector.rs  xml.rs
crates/elisp/src/reader/: mod.rs
crates/elisp/src/vm/: mod.rs
crates/elisp/tests/: autoload_r2.rs  catch_throw_term_r14.rs  category_tables.rs  cl_defmethod_qualifiers_r8.rs  eieio_slot_type_r20.rs  eieio_wiring_r4.rs  erc_d_t_stubs_r7.rs  ert_deftest_let_capture_r19.rs  ert_deftest_tags_r23.rs  eshell_stubs_r6.rs  files_tests_name_binding_r9.rs  hierarchy_fixture_r13.rs  icalendar_tramp_stubs_r10.rs  minibuf_all_completions_r12.rs  other_runtime_primitives.rs  overlays_at_r22.rs  primitives_cl_p5.rs  primitives_eieio_p6.rs  primitives_p8v2.rs  reader_bugs_r17.rs  reader_edges.rs  rx_symbols_r18.rs  semantic_parity_phase5.rs  sqlite_returning.rs  undo_selection_bootstrap.rs  void_function_nil_r11.rs  void_vars_r15.rs  void_vars_r5.rs  window_display_headless.rs  wrong_type_number_r24.rs
crates/server/: Cargo.toml
crates/server/benches/: edit.rs  markdown_parse.rs  search.rs  syntax.rs
crates/server/lisp/: commands.el  default-init.el
crates/server/lisp/modes/: rust-mode.el
crates/server/src/: cancel.rs  commands.rs  error.rs  isearch.rs  lib.rs  lisp_host.rs  macros.rs  minibuffer.rs
crates/server/src/document/: buffer.rs  buffer_list.rs  cursor.rs  history.rs  kill_ring.rs  mod.rs
crates/server/src/emacs/: casefiddle.rs  data.rs  editfns.rs  mod.rs  search.rs
crates/server/src/export/: docx.rs  mod.rs  pdf.rs
crates/server/src/import/: docx.rs
crates/server/src/lsp/: buffer_state.rs  client.rs  config.rs  events.rs  mod.rs  position.rs  protocol.rs  registry.rs
crates/server/src/markdown/: mod.rs
crates/server/src/syntax/: highlight.rs  line_adapter.rs  mod.rs  tree_sitter_impl.rs
crates/server/tests/: lsp_rust_analyzer.rs
docs/: PERFORMANCE.md  gc.md  perf-baseline.md  session.md
scripts/: triage_ert.py
spec/lean/: Elisp.lean  lake-manifest.json  lakefile.toml
spec/lean/Elisp/: Ast.lean  Env.lean  Eval.lean  Oracle.lean
spec/quint/: jit_runtime.qnt
