[package]
name = "rele-elisp-spec-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Differential testing and formal spec replay for rele-elisp"
publish = false

[dependencies]
rele-elisp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1"
