[package]
name = "rele-elisp"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Emacs Lisp interpreter for gpui-md"

[features]
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
]

[dependencies]
parking_lot = { workspace = true }
regex = { workspace = true }

# JIT (optional)
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
