[package]
name = "rele-elisp"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Emacs Lisp interpreter for gpui-md"

[features]
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
]

[dependencies]
parking_lot = { workspace = true }
regex = { workspace = true }

# JIT (optional)
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }

[dev-dependencies]
walkdir = "2"
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

# Harness subprocess worker. Used by cargo test test_emacs_all_files_run
# (which relies on a pool of these to isolate each test file in its own
# process). Not user-facing.
[[bin]]
name = "emacs_test_worker"
path = "src/bin/emacs_test_worker.rs"
# Only built when test code is also built (so we don't pollute release
# builds of the library).
required-features = []

[[bin]]
name = "reader_audit"
path = "src/bin/reader_audit.rs"
required-features = []

[[bin]]
name = "load_audit"
path = "src/bin/load_audit.rs"
required-features = []

[[bin]]
name = "require_audit"
path = "src/bin/require_audit.rs"
required-features = []

[[bin]]
name = "jit_audit"
path = "src/bin/jit_audit.rs"
required-features = []

# Microbenchmarks for hot eval paths. Run with
# `cargo bench -p rele-elisp --bench eval_dispatch` (or value_fastpath).
[[bench]]
name = "eval_dispatch"
harness = false

[[bench]]
name = "value_fastpath"
harness = false

[[bench]]
name = "jit_hotpath"
harness = false
