[package]
name = "rele-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Shared editor core for rele markdown editor"
license.workspace = true
repository.workspace = true

[dependencies]
# First-party
rele-elisp = { workspace = true }

# Document model
ropey = { workspace = true }
regex = { workspace = true }

# Markdown parsing
comrak = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
parking_lot = { workspace = true }

# Logging
log = { workspace = true }

# CLI
clap = { workspace = true }

# Word (.docx) import/export
docx = { workspace = true }

# PDF export (optional)
genpdf = { workspace = true, optional = true }

# File dialogs
rfd = { workspace = true }

# Home directory
dirs = { workspace = true }

# Keybindings
gpui-keybinding = { workspace = true }

# LSP protocol types
lsp-types = { workspace = true }
url = { workspace = true }

# Tree-sitter
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-rust = { workspace = true }

[features]
pdf-export = ["dep:genpdf"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "edit"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "markdown_parse"
harness = false

[[bench]]
name = "syntax"
harness = false
